--- a/style.css
+++ b/style.css
@@ -65,3 +65,17 @@ body {
   top:-50px;
   left: 50px;
 }
+
+
+.debugArea {
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  float: left;
+  color: white;
+}
+
+.debugTextareaClass {
+  width: 400px;
+  height: 150px;
+}
